force-app/main/default/objects/Product2/fields/Country_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Text__c</fullName>
    <description>for search result column purposes. Search results layout doesnt support picklist field, therefore have to use this formula as workaround</description>
    <formula>TEXT(Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>