force-app/main/default/objects/Product2/fields/Focus_Product__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Products</label>
    <type>Checkbox</type>
</CustomField>