force-app/main/default/objects/Product2/fields/Hierarchy_L1__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_L1__c</fullName>
    <label>Hierarchy L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Product_L1</valueSetName>
    </valueSet>
</CustomField>