force-app/main/default/objects/Product2/fields/Hierarchy_L2__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_L2__c</fullName>
    <label>Hierarchy L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Product_L2</valueSetName>
    </valueSet>
</CustomField>