force-app/main/default/objects/Product2/fields/Hierarchy_L3__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_L3__c</fullName>
    <label>Hierarchy L3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GCA_Product_L3</valueSetName>
    </valueSet>
</CustomField>