force-app/main/default/objects/Product2/fields/ID_For_Report__c.field-meta.xml
<CustomField>
    <fullName>ID_For_Report__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID (Report)</label>
    <type>Text</type>
</CustomField>