force-app/main/default/objects/Product2/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>CASE(
    Country__c, 
    &apos;India&apos;, &apos;India&apos;,
    &apos;Australia&apos;, &apos;ANZ&apos;,
    &apos;New Zealand&apos;, &apos;ANZ&apos;,
    &apos;Indonesia&apos;, &apos;SEA&apos;,
    &apos;Singapore&apos;, &apos;SEA&apos;,
    &apos;Malaysia&apos;, &apos;SEA&apos;,
    &apos;Thailand&apos;, &apos;SEA&apos;,
    &apos;Vietnam&apos;, &apos;SEA&apos;,
    &apos;Philippines&apos;, &apos;SEA&apos;,
    &apos;Pakistan&apos;, &apos;SEA&apos;,
    &apos;Myanmar&apos;, &apos;SEA&apos;,
    &apos;Afghanistan&apos;, &apos;SEA&apos;,
    &apos;Laos&apos;, &apos;SEA&apos;,
    &apos;Cambodia&apos;, &apos;SEA&apos;,
    &apos;Brunei&apos;, &apos;SEA&apos;,
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>