force-app/main/default/objects/Product2/fields/Speed_Growth__c.field-meta.xml
<CustomField>
    <fullName>Speed_Growth__c</fullName>
    <label>Focus Product/Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus Product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
                <isActive>false</isActive>
                <label>Growth</label>
            </value>
            <value>
                <fullName>Speed</fullName>
                <isActive>false</isActive>
                <label>Speed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>